fix: overflow-x di visi misi

--- a/src/components/visi-misi/VisiMisi.scss
+++ b/src/components/visi-misi/VisiMisi.scss
@@ -3,6 +3,8 @@
     display: flex;
     padding: 100px 150px;
 
+    overflow-x: hidden;
+
     .bunga_tangkai_fill {
         position: absolute;
         transform: rotate(12deg);
